2010-08-03  Beth Dakin  <bdakin@apple.com>

        Speculative build fix.

        * css/mathml.css:
        (mi):
        (math[mathsize="small"], mstyle[mathsize="small"], mo[mathsize="small"], mn[mathsize="small"], mi[mathsize="small"], mtext[mathsize="small"], mspace[mathsize="small"], ms[mathsize="small"]):
        (math[mathsize="normal"], mstyle[mathsize="normal"], mo[mathsize="normal"], mn[mathsize="normal"], mi[mathsize="normal"], mtext[mathsize="normal"], mspace[mathsize="normal"], ms[mathsize="normal"]):
        (math[mathsize="big"], mstyle[mathsize="big"], mo[mathsize="big"], mn[mathsize="big"], mi[mathsize="big"], mtext[mathsize="big"], mspace[mathsize="big"], ms[mathsize="big"]):

2010-08-03  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=43444
        PLATFORM(CF) is false on Windows in JavaScriptCore

        Moved some PLATFORM(WIN) #defines down into JavaScriptCore.

        * config.h: Moved WTF_PLATFORM_CF 1 and WTF_USE_PTHREADS 0 to wtf/Platform.h.
        Removed #undef WTF_USE_WININET because wtf/Platform.h no longer #defines it.

2010-08-03  Alex Milowski  <alex@milowski.com>

        Reviewed by Beth Dakin.

        Changed the ENABLE_MATHML value to enable MathML by default.

        * Configurations/FeatureDefines.xcconfig:

2010-07-30  Stephen White  <senorblanco@chromium.org>

        Reviewed by Ojan Vafai.

        Move PlatformContextSkia and NativeImageSkia into the WebCore namespace.
        https://bugs.webkit.org/show_bug.cgi?id=43272

        One wrinkle is that PlatformContext and NativeImagePtr are 
        typedef'ed outside outside the WebCore namespace block, so the
        PlatformContextSkia and NativeImageSkia have to be forward-declared 
        explicitly within that namespace.  Another solution might be to move
        those declarations into the WebCore namespace block below, but that