@@ -41,24 +41,24 @@ using namespace MathMLNames;
 // Bottom padding of the radical (px)
 const int gRadicalBasePad = 3;
 // Threshold above which the radical shape is modified to look nice with big bases (%)
-const float gThresholdBaseHeight = 1.5;
+const float gThresholdBaseHeight = 1.5f;
 // Radical width (%)
-const float gRadicalWidth = 0.75;
+const float gRadicalWidth = 0.75f;
 // Horizontal position of the bottom point of the radical (%)
-const float gRadicalBottomPointXPos= 0.5;
+const float gRadicalBottomPointXPos= 0.5f;
 // Horizontal position of the top left point of the radical (%)
-const float gRadicalTopLeftPointXPos = 0.2;
+const float gRadicalTopLeftPointXPos = 0.2f;
 // Vertical position of the top left point of the radical (%)
-const float gRadicalTopLeftPointYPos = 0.5; 
+const float gRadicalTopLeftPointYPos = 0.5f; 
 // Vertical shift of the left end point of the radical (%)
-const float gRadicalLeftEndYShift = 0.05;
+const float gRadicalLeftEndYShift = 0.05f;
 // Additional bottom root padding (%)
-const float gRootBottomPadding = 0.2;
+const float gRootBottomPadding = 0.2f;
 
 // Radical line thickness (%)
-const float gRadicalLineThickness = 0.02;
+const float gRadicalLineThickness = 0.02f;
 // Radical thick line thickness (%)
-const float gRadicalThickLineThickness = 0.1;
+const float gRadicalThickLineThickness = 0.1f;
     
 RenderMathMLSquareRoot::RenderMathMLSquareRoot(Node *expression) 
     : RenderMathMLBlock(expression) 
@@ -102,7 +102,7 @@ void RenderMathMLSquareRoot::paint(PaintInfo& info, int tx, int ty)
     if (maxHeight > thresholdHeight && thresholdHeight) {
         float shift = (maxHeight - thresholdHeight) / static_cast<float>(thresholdHeight);
         if (shift > 1.)
-            shift = 1.;
+            shift = 1.0f;
         topStartShift = static_cast<int>(gRadicalBottomPointXPos * frontWidth * shift);
     }
     
